--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 
 // Your CSS partials
 @import "pages/index";
+@import "pages/dashboard";
 @import "components/index";
 @import "components/skillcard";
 @import "components/navbar";
