--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,57 +1,54 @@
-<div class="container">
-<h1>My Bookings</h1>
-  <div class="cards">
-    <% @bookings.each do |booking| %>
-      <div class="card">
-        <div class="card-img">
-          <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
-          class: "img-fluid", style: "object-fit: cover;") %>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title"><%= booking.skill.name %></h5>
-          <%# add user-avatar %>
-          <h5 class="card-title">By <%= booking.skill.user["first_name"] %></h5>
-          <h6 class="card-subtitle"><%= booking.skill.category %></h6>
-          <h6 class="card-title">Booked for: <%= booking.date %></h6>
-          <%# button_to "Update", booking_path(:id) %>
+<div class="dashboard_container">
+<%# here starts PENDING REQUEST section %>
+<%# here ends PENDING REQUEST section %>
 
-          <%# accept or reject forms %>
-          <div class="booking-actions">
-            <% if booking.pending? %>
-              <%= simple_form_for booking do |f| %>
-                <%= f.input :status, as: :hidden, input_html: { value: 'accepted'} %>
-                <%= f.submit 'Accept', class: 'btn btn-info' %>
-              <% end %>
-              <%= simple_form_for booking do |f| %>
-                <%= f.input :status, as: :hidden, input_html: { value: 'rejected'} %>
-                <%= f.submit 'Reject', class: 'btn btn-light' %>
-              <% end %>
-            <% else %>
-              <p class='booking-tag'><%= booking.status %></p>
-            <% end %>
+<%# here starts PROFILE section %>
+<%# here ends PROFILE section %>
+
+<%# here starts BOOKING section %>
+  <div class="my_bookings">
+    <h2>My Bookings</h2>
+    <div class="cards">
+      <% @bookings.each do |booking| %>
+        <div class="card">
+          <div class="card-img">
+            <%= cl_image_tag(booking.skill.photo.key, class: "card-img-top", crop: :thumb, gravity: :face) %>
+          </div>
+
+          <div class="card-body">
+            <h5 class="card-title"><%= booking.skill.name %></h5>
+            <%# add user-avatar %>
+            <h6 class="card-title">with <%= booking.skill.user["first_name"] %></h6>
+            <p class="card-subtitle"><%= booking.skill.category %></p>
+            <br>
+            <h6 class="card-title">🗓 <%= booking.date %></h6>
+            <%# button_to "Update", booking_path(:id) %>
           </div>
         </div>
-      </div>
-    <% end %>
-  </div>
-</div>
-
-<div class="container">
-  <h1>My Offers</h1>
-  <div class="cards">
-    <% @skills.each do |skill| %>
-    <div class="card">
-      <div class="card-img">
-          <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
-          class: "img-fluid", style: "object-fit: cover;") %>
-      </div>
-      <div class="card-body">
-          <h5 class="card-title"><%= skill.name %></h5>
-
-          <h5 class="card-title">By <%= skill.user["first_name"] %></h5>
-          <h6 class="card-subtitle"><%= skill.category %></h6>
       <% end %>
+    </div>
+  </div>
+<%# here ends BOOKING section %>
+
+<%# here starts MY_SKILLS section %>
+  <div class="my_skills">
+  <h2>My Skills</h2>
+    <div class="cards">
+      <% @skills.each do |skill| %>
+      <div class="card">
+        <div class="card-img">
+            <%= cl_image_tag(skill.photo.key, class: "card-img-top", crop: :thumb, gravity: :face) %>
+        </div>
+
+        <div class="card-body">
+            <h5 class="card-title"><%= skill.name %></h5>
+
+            <h5 class="card-title">By <%= skill.user["first_name"] %></h5>
+            <h6 class="card-subtitle"><%= skill.category %></h6>
+        </div>
+        <% end %>
       </div>
     </div>
   </div>
+<%# here ends MY_SKILLS section %>
 </div>
